<resources>

    <string name="app_name">联塑BI</string>

    <string name="loading">请求数据中，请稍候&#8230;</string>

    <string name="text_login">登  录</string>
    <string name="text_account">账 号</string>
    <string name="text_password">密 码</string>
    <string name="text_password_forget">忘记密码?</string>
    <string name="text_login_no_account">请输入用户名</string>
    <string name="text_login_no_password">请输入密码</string>
    <string name="text_login_failed">登录失败</string>
    <string name="text_login_failed_infowrong">密码或用户名不对</string>
    <string name="text_authority_failed_dongpwdwrong">动态密码错误</string>
    <string name="text_login_failed_dongpwdwrong">动态密码不对</string>
    <string name="text_login_failed_dongpwdnobind">没有绑定动态密码器</string>
    <string name="text_scratpwd_failed_setup">手势密码设置失败</string>

    <string name="cancel">取消</string>
    <string name="try_again">重试</string>
    <string name="goon">继续</string>
    <string name="confirm">确认</string>
    <string name="sure">确定</string>
    <string name="quit_press_again">再按一次退出程序</string>
    <string name="update_tips">发现最新版本，是否更新?</string>

    <string name="app_full_name">联塑商城数据报表系统beta1.0</string>

    <string name="app_title">联塑商城数据报表系统</string>

    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="main_access">访问统计</string>
    <string name="main_access_today">昨日访客</string>
    <string name="main_sales">销售统计</string>
    <string name="main_sales_today">昨日销售额</string>
    <string name="main_store">库存统计</string>
    <string name="main_store_today">昨日出货合计</string>
    <string name="main_user">用户统计</string>
    <string name="main_user_today">昨日新增用户</string>

    <string name="access_uv">访客(UV)</string>
    <string name="access_pv">浏览量(PV)</string>

    <string name="sales_amount">销售额</string>
    <string name="sales_paper">单据量</string>
    <string name="sales_car">车次量</string>
    <string name="sales_type">分类占比</string>

    <string name="store_out">出货统计</string>
    <string name="store_in">收货统计</string>
    <string name="store_all">库存查询</string>

    <string name="user_new">新增用户</string>
    <string name="user_total">总用户</string>
    <string name="user_supplier">供应商</string>
    <string name="user_fivemetal">五金门店</string>

    <string name="no_data_tips">查询不到数据</string>
    <string name="no_data_error">连接不到服务器</string>


    <string name="text_lock_input">请输入手势密码</string>
    <string name="text_lock_input_wrong">密码错误，还可以输入4次</string>
    <string name="text_lock_input_lock">账户已被锁定，请10分钟之后再试</string>

    <string name="text_lock_setup">请设置手势密码</string>
    <string name="text_lock_setup_again">请再次设置手势密码</string>
    <string name="text_lock_setup_too_short" >最少链接4个点，请重新设置</string>
    <string name="text_lock_setup_wrong" >与上次设置不一致，请重新设置</string>

    <string name="text_setup_password" >请输入当前密码</string>
    <string name="text_setup_password1" >请输入新密码</string>
    <string name="text_setup_password2" >请确认新密码</string>
    <string name="text_setup_password_success">密码修改成功</string>
    <string name="text_setup_password_failed" >密码修改失败</string>
    <string name="text_setup_password_tips1" >当前密码输入错误</string>
    <string name="text_setup_password_tips2" >新密码两次输入不一致</string>
    <string name="text_setup_password_tips3" >密码不少于6位，且不能为纯数字</string>

</resources>
