<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:gravity="bottom"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/interval_C"
        android:paddingRight="@dimen/interval_C">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/interval_F"
            android:paddingBottom="@dimen/interval_G"
            android:text="@string/text_account"/>

        <EditText
            android:id="@+id/accountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/interval_E"
            android:paddingTop="@dimen/interval_F"
            android:paddingBottom="@dimen/interval_G"
            android:background="@null"
            android:ems="8"
            android:hint="请输入账号">
        </EditText>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/interval_C"
        android:paddingRight="@dimen/interval_C">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/interval_line_height"
            android:text="@string/text_account"
            android:visibility="invisible"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/interval_line_height"
            android:background="@color/MALL_C7" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/interval_C"
        android:paddingRight="@dimen/interval_C">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/interval_F"
            android:paddingBottom="@dimen/interval_G"
            android:text="@string/text_password"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/interval_E"
            android:paddingTop="@dimen/interval_F"
            android:paddingBottom="@dimen/interval_G"
            android:background="@null"
            android:ems="8">
        </EditText>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/interval_line_height"
        android:background="@color/MALL_C7" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/interval_B"
        android:paddingBottom="@dimen/interval_B"
        android:layout_marginTop="@dimen/interval_A"
        android:layout_marginLeft="@dimen/interval_C"
        android:layout_marginRight="@dimen/interval_C"
        android:gravity="center"
        android:text="@string/text_login"
        android:textColor="@color/MALL_C4"
        android:textStyle="bold"
        android:background="@drawable/button_login_disable"/>

</LinearLayout>