<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <FrameLayout
        android:id="@+id/roating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:clickable="true">

        <ImageView
            android:id="@+id/splash_leftroat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@mipmap/splash_left_roat" />

        <ImageView
            android:id="@+id/splash_centerroat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@mipmap/splash_round" />

        <ImageView
            android:id="@+id/splash_rightroat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@mipmap/splash_right_roat" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/login_accinput_framelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_input_1">

            <LinearLayout
                android:id="@+id/login_account_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/login_account_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/text_account"
                    android:textColor="@color/MALL_C6"
                    android:textSize="@dimen/F6"
                    android:textStyle="normal" />

            </LinearLayout>

            <EditText
                android:id="@+id/accountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:background="@null"
                android:clickable="true"
                android:digits="@string/digits"
                android:ems="20"
                android:gravity="center"
                android:inputType="textVisiblePassword"
                android:paddingBottom="4dp"
                android:paddingTop="@dimen/interval_F"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/REPORT_UI_C6"></EditText>


        </FrameLayout>

        <FrameLayout
            android:id="@+id/login_passinput_framelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@mipmap/login_input_1">

            <LinearLayout
                android:id="@+id/login_password_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/login_password_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/text_password"
                    android:textColor="@color/MALL_C6"
                    android:textSize="@dimen/F6"
                    android:textStyle="normal" />

            </LinearLayout>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:background="@null"
                android:clickable="true"
                android:ems="20"
                android:gravity="center"
                android:inputType="textPassword"
                android:paddingBottom="4dp"
                android:paddingTop="@dimen/interval_F"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/REPORT_UI_C6"></EditText>

        </FrameLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/interval_C"
            android:layout_marginRight="@dimen/interval_C"
            android:layout_marginTop="@dimen/interval_A"
            android:background="@drawable/login_button_bg_x"
            android:gravity="center"
            android:paddingBottom="@dimen/interval_B"
            android:paddingTop="@dimen/interval_B" />

        <TextView
            android:id="@+id/login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/interval_D"
            android:paddingTop="@dimen/interval_D"
            android:text="@string/text_password_forget"
            android:textColor="@color/MALL_C6"
            android:textSize="@dimen/F6"
            android:textStyle="normal" />

    </LinearLayout>

</RelativeLayout>