<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/REPORT_UI_C6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/interval_C"
        android:paddingLeft="@dimen/interval_A"
        android:paddingRight="@dimen/interval_A">

        <include
            layout="@layout/time_chooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/data_view"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="38dp"
        android:paddingLeft="@dimen/interval_A"
        android:paddingRight="@dimen/interval_A">

        <LinearLayout
            android:id="@+id/chart_xy_container"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/interval_C"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <com.lesso.data.ui.RecordScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/data_view_user"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/report_graph_size_height_user"
                    android:orientation="vertical">

                </LinearLayout>

            </com.lesso.data.ui.RecordScrollView>


        </LinearLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/fragment_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/interval_C"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_toogle_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/btn_toogle_fragment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/interval_C"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:id="@+id/tab_user_new"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_bg_x"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/interval_C"
                    android:paddingTop="@dimen/interval_C"
                    android:text="@string/user_new"
                    android:textColor="@color/REPORT_UI_C2"
                    android:textSize="@dimen/F5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/interval_C"
                    android:background="@color/REPORT_TABLE_C1" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_user_total"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_bg_x"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/interval_C"
                    android:paddingTop="@dimen/interval_C"
                    android:text="@string/user_total"
                    android:textColor="@color/REPORT_UI_C2"
                    android:textSize="@dimen/F5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/interval_C"
                    android:background="@color/REPORT_TABLE_C2" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_user_supplier"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_bg_x"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/interval_C"
                    android:paddingTop="@dimen/interval_C"
                    android:text="@string/user_supplier"
                    android:textColor="@color/REPORT_UI_C2"
                    android:textSize="@dimen/F5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/interval_C"
                    android:background="@color/REPORT_TABLE_C3" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_user_fivemetal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_bg_x"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/interval_C"
                    android:paddingTop="@dimen/interval_C"
                    android:text="@string/user_fivemetal"
                    android:textColor="@color/REPORT_UI_C2"
                    android:textSize="@dimen/F5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/interval_C"
                    android:background="@color/REPORT_TABLE_C4" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>